Finalização do projeto CRUD